Terraform/Modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-vpc"
    }
  )
}

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnet_cidr
  availability_zone = var.availability_zone_public
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-public-subnet"
    }
  )
}

resource "aws_subnet" "private" {
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnet_cidr
  availability_zone = var.availability_zone_private
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-private-subnet"
    }
  )
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-igw"
    }
  )
}

resource "aws_nat_gateway" "main" {
  subnet_id = aws_subnet.public.id
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-nat-gateway"
    }
  )
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-public-route-table"
    }
  )
}

resource "aws_route" "public" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.main.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  tags = merge(
    var.vpc_tags,
    {
      Name = "${var.project_name}-${var.environment}-private-route-table"
    }
  )
}

resource "aws_route" "private" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  subnet_id = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}

resource "aws_security_group" "main" {
  name = var.security_group_name
  description = var.security_group_description
  vpc_id = aws_vpc.main.id
  tags = merge(
    var.security_group_tags,
    {
      Name = "${var.project_name}-${var.environment}-security-group"
    }
  )
}
